--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar_2.png" alt="" /></span>
 					<h1 id="logo"><a href="#">Andrea Ferlini</a></h1>
-					<p>(waves) ?  <br />
+					<p>(🌊) ?  <br />
 					(andrea.isSurfing = 1) : (andrea.isReachable = 0);</p>
 				</header>
 				<nav id="nav">
@@ -54,7 +54,7 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>hi, welcome to the dark side of the force</h2>
+										<h2>hi there! 👋🏼</h2>
 										<p>I'm Andrea, PhD canditate in the <a href="https://www.cl.cam.ac.uk/~cm542/group.html">NetOS</a> group<br />
 										at the University of Cambridge.</p>
 									</header>
@@ -65,15 +65,15 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<h3>Stuff I usually do</h3>
+									<p>This is a NON comprehensive list of <a href="pdf_files/resume_andrea_ferlini.pdf">things I can do</a>. Though, it does not necessarely mean I am willing to do them 😉.</p>
 									<ul class="feature-icons">
-										<li class="fa-code">Write all the code</li>
-										<li class="fa-cubes">Stack small boxes</li>
-										<li class="fa-book">Read books and stuff</li>
-										<li class="fa-coffee">Drink much coffee</li>
-										<li class="fa-bolt">Lightning bolt</li>
-										<li class="fa-users">Shadow clone technique</li>
+										<li class="fa-code">Code in C, C++, Python</li>
+										<li class="fa-cubes">Stack convolutional layers, beer casks</li>
+										<li class="fa-book">Read scientific papers and write stuff</li>
+										<li class="fa-coffee">Drink coffee while doing the above</li>
+										<li class="fa-bolt">Surf, Kitesurf, Hike, Boulder etc.</li>
+										<li class="fa-users">Talk with people... sometimes even listen </li>
 									</ul>
 								</div>
 							</section>
@@ -81,28 +81,28 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<h3>Publications</h3>
+									<p>If you are interested in what I am doing, you can find and read my publications here (if I remember to upload them).</p>
 									<div class="features">
+										<article>
+											<a href="pdf_files/c-continuum.pdf" class="image"><img src="images/c-continuum.png" alt="" /></a>
+											<div class="inner">
+												<h4>C-Continuum: Edge-to-Cloud Computing for Distributed AI</h4>
+												<p>A. Ferlini, D. Aguiari, J. Cao, S. Guo, G. Pau <br/> 2019 IEEE Conference on Computer Communications (INFOCOM ’19)</p>
+											</div>
+										</article>
+										<article>
+											<a href="pdf_files/mobiuk19.pdf" class="image"><img src="images/mobiuk.png" alt="" /></a>
+											<div class="inner">
+												<h4>In-Ear Aid for Speech Separation</h4>
+												<p>Andrea Ferlini, Cecilia Mascolo <br/> UK Mobile, Wearable, and Ubiquitous Systems Research Symposium (MOBIUK ’19)</p>
+											</div>
+										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-											</div>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Multiple other works are still under double blind peer review</h4>
+												<p>I will update the website as soon as I get notified.</p>
 											</div>
 										</article>
 									</div>
@@ -113,8 +113,8 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-									<form method="post" action="#">
+									<p>If you've checked the forecasts and there are no waves (nor wind), then drop me an <a href="mailto:af679@cam.ac.uk">email</a> 📧.</p>
+									<!-- <form method="post" action="assets/php/email_form.php">
 										<div class="row gtr-uniform">
 											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
@@ -127,7 +127,7 @@
 												</ul>
 											</div>
 										</div>
-									</form>
+									</form> -->
 								</div>
 							</section>
 
@@ -468,7 +468,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Andrea Ferlini. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
