changed greeting to howzit

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>hi there! 👋🏼</h2>
+										<h2>howzit! 👋🏼</h2>
 										<p>I'm Andrea, PhD canditate in the <a href="https://www.cl.cam.ac.uk/~cm542/group.html">NetOS</a> group<br />
 										at the University of Cambridge.</p>
 									</header>
