--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>howzit! 👋🏼</h2>
-										<p>I'm Andrea, PhD canditate in the <a href="https://www.cl.cam.ac.uk/~cm542/group.html">NetOS</a> group<br />
+										<p>I'm Andrea, PhD student in the <a href="https://www.cl.cam.ac.uk/~cm542/group.html">NetOS</a> group<br />
 										at the University of Cambridge.</p>
 									</header>
 									<p>With my advisor, <a href="https://www.cl.cam.ac.uk/~cm542/">Prof Cecilia Mascolo</a>, I am understanding human behavioural cues, and performing speech separation and enhancement to let people with hearing disabilities have the same perception of the reality as non-impaired people. My research interests range between wearables, applied deep learning on constrained devices, privacy, and mobile health. </p>
