--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
 										<p>I'm Andrea, PhD student in the <a href="https://www.cl.cam.ac.uk/~cm542/group.html">NetOS</a> group<br />
 										at the University of Cambridge.</p>
 									</header>
-									<p>With my advisor, <a href="https://www.cl.cam.ac.uk/~cm542/">Prof Cecilia Mascolo</a>, I am understanding human behavioural cues, and performing speech separation and enhancement to let people with hearing disabilities have the same perception of the reality as non-impaired people. My research interests range between wearables, applied deep learning on constrained devices, privacy, and mobile health. </p>
+									<p>With my advisor, <a href="https://www.cl.cam.ac.uk/~cm542/">Prof Cecilia Mascolo</a>, I am investigating the potential of sensory earables for mobile health. My research interests range between wearables and how to augment them, applied machine learning, privacy, and mobile health. </p>
+									<p>Prior joining Cambridge I worked with <a href="https://scholar.google.com/citations?user=jLEgvnsAAAAJ&hl=en">Prof Giovanni Pau</a> at Sorbonne University (LIP6, formerly UPMC), Paris, where I focused on mobile systems and IoT.</p>
+									<!-- <p>With my advisor, <a href="https://www.cl.cam.ac.uk/~cm542/">Prof Cecilia Mascolo</a>, I am understanding human behavioural cues, and performing speech separation and enhancement to let people with hearing disabilities have the same perception of the reality as non-impaired people. My research interests range between wearables, applied deep learning on constrained devices, privacy, and mobile health. </p> -->
 								</div>
 							</section>
 
@@ -72,8 +74,8 @@
 										<li class="fa-cubes">Stack convolutional layers, beer casks</li>
 										<li class="fa-book">Read scientific papers and write stuff</li>
 										<li class="fa-coffee">Drink coffee while doing the above</li>
-										<li class="fa-bolt">Surf, Kitesurf, Hike, Boulder etc.</li>
-										<li class="fa-users">Talk with people... sometimes even listen </li>
+										<li class="fa-bolt">Cycle, Surf, Kitesurf, Hike, Boulder</li>
+										<li class="fa-users">Talk with people... sometimes even listen</li>
 									</ul>
 								</div>
 							</section>
@@ -121,7 +123,7 @@
 											<a href="pdf_files/c-continuum.pdf" class="image"><img src="images/c-continuum.png" alt="" /></a>
 											<div class="inner">
 												<h4>C-Continuum: Edge-to-Cloud Computing for Distributed AI</h4>
-												<p>A. Ferlini, D. Aguiari, J. Cao, S. Guo, G. Pau <br/> 2019 IEEE Conference on Computer Communications (INFOCOM ’19)</p>
+												<p>Andrea Ferlini, Davide Aguiari, Jiannong Cao, Song Guo, Giovanni Pau <br/> 2019 IEEE Conference on Computer Communications (INFOCOM ’19)</p>
 											</div>
 										</article>
 										
